--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
-de.elomagic.dbtk.source.database.url=jdbc:sybase:Tds:localhost:2638
+# JDBC database connection URL
+de.elomagic.dbtk.source.database.url=jdbc:sqlanywhere:CommLinks=tcpip(HOST=localhost;VerifyServerName=NO)
+#de.elomagic.dbtk.source.database.url=jdbc:sybase:Tds:localhost:2638
+# JDBC database user name
 de.elomagic.dbtk.source.username=dba
+# JDBC database password
 de.elomagic.dbtk.source.password=secret
 # Used by the "Reload..." classes. Database properties will be ignored
-de.elomagic.dbtk.source.file=c:\\projects\\db\\ris-unloaded-example\\reload.sql
-de.elomagic.dbtk.source.export.path=c:\\projects\\db\\ris-unloaded-example
+de.elomagic.dbtk.source.file=c:\\projects\\db\\db-unloaded-example\\reload.sql
+de.elomagic.dbtk.source.export.path=c:\\projects\\db\\db-unloaded-example
+# Encoding of the reload script and table content files.
 de.elomagic.dbtk.source.encoding=UTF-8
+# Translator class (Currently, the JdbcSqlAnyImporter is recommended)
 de.elomagic.dbtk.source.translator=de.elomagic.importer.ReloadV2SqlImporter
 
+# Name of the target database
 de.elomagic.dbtk.target.databaseName=MigratedDatabase
+# Encoding of the target database
 de.elomagic.dbtk.target.encoding=UTF8
 de.elomagic.dbtk.target.ctype=en_US.utf8
 de.elomagic.dbtk.target.collate=en_US.utf8
@@ -16,4 +24,5 @@ de.elomagic.dbtk.target.adminRole=adminUser
 de.elomagic.dbtk.target.userRole=user
 de.elomagic.dbtk.target.backupRole=backupUser
 de.elomagic.dbtk.target.output.path=.\\target
+# How to interpret NULL table content files.
 de.elomagic.dbtk.target.output.value.null=
