Hybrid importer added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ de.elomagic.dbtk.source.export.path=c:\\projects\\db\\db-unloaded-example
 # Encoding of the reload script and table content files.
 de.elomagic.dbtk.source.encoding=UTF-8
 # Translator class (Currently, the JdbcSqlAnyImporter is recommended)
-de.elomagic.dbtk.source.translator=de.elomagic.importer.ReloadV2SqlImporter
+de.elomagic.dbtk.source.translator=de.elomagic.importer.SqlAnyReloadV2Importer
 
 # Name of the target database
 de.elomagic.dbtk.target.databaseName=MigratedDatabase
