--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ de.elomagic.dbtk.source.export.path=c:\\projects\\db\\db-unloaded-example
 # Encoding of the reload script and table content files.
 de.elomagic.dbtk.source.encoding=UTF-8
 # Translator class (Currently, the JdbcSqlAnyImporter is recommended)
-de.elomagic.dbtk.source.translator=de.elomagic.unloader.SqlAnyReloadV2Unloader
+de.elomagic.dbtk.source.unloaderClass=de.elomagic.unloader.SqlAnyReloadV2Unloader
 
+de.elomagic.dbtk.target.loaderClass=de.elomagic.loader.PostgresLoader
 # Name of the target database
 de.elomagic.dbtk.target.databaseName=MigratedDatabase
 # Encoding of the target database
